--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h1{
     max-width: 1440px;
     margin: auto;
     padding-left: 25px;
-    padding-right: 25px
+    padding-right: 25px;
 }
 .row{
     display: flex;
@@ -53,7 +53,7 @@ h1{
     margin-bottom: 30px;
 }
 .col-5{
-    padding-bottom: 350px;
+    padding-bottom: 100px;
     padding-right: 50px;
     font-family: 'Poppins', sans-serif;
     font-family: 'Inter', sans-serif;
@@ -67,6 +67,10 @@ h1{
     max-height: 100px;
     margin-left: 100px;
 }
+/* .col-6{
+    min-width: 600px;
+
+} */
 .filter-container{
     max-width: 1080px;
     /* margin: auto; */
@@ -76,10 +80,16 @@ h1{
     margin-top: -80px;
     padding-bottom: 100px;
 }
+.emailt{
+    text-decoration:none;
+
+}
 /* .copyright{
     text-align: center;
     background: radial-gradient(#fff, #003487);
 } */
+
+
 
 @media only screen and (max-width: 800px) {
     .small-container{
@@ -109,14 +119,13 @@ h1{
     .filter-container h4{
         width: 140%;
         text-align: left;
-            margin-top: 300px;
+        margin-top: 300px;
     }
     .col-5 img{
         margin: auto;
         align-items: center;
         text-align: center;
     }
-
  
 }
 
@@ -148,11 +157,7 @@ h1{
     .filter-container h4{
         width: 140%;
         text-align: left;
-            margin-top: 300px;
-    }
-    .col-5 img{
-        margin: auto;
-        align-items: center;
-        text-align: center;
-    }
+        margin-top: 300px;
+    
+    } 
 }
